[gd_scene load_steps=2 format=3 uid="uid://c8m4x0q0x8q0y"]

[ext_resource type="Script" path="res://scenes/ui/screens/career_submenu_screen.gd" id="1_def34"]

[node name="CareerSubmenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_def34")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1.0)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Career"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="NewCareerButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "New Career"

[node name="LoadCareerButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Career"

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"

[node name="SettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Settings"

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 110.0
grow_horizontal = 0
text = "Exit"
